2002-08-04  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Make the phdr loop
	actually iterate over the elements.  Fix typo p_type -> p_vaddr.

	* include/pthread.h: Don't declare __pthread_initialize_minimal as
	weak here; we declare it weak or strong in the one place we use it.
	* sysdeps/generic/libc-start.c: ... which is here.
	Don't make the decl weak if [USE_TLS], since static programs need TLS
	setup even when single-threaded.

	* stdlib/isomac.c (fmt): Add -DNOT_IN_libc to the compiler command.

	* elf/Makefile (test-srcs): Add $(modules-names) to it.
	(CFLAGS-vismod2.c, CFLAGS-failobj.c, CFLAGS-constload2.c,
	CFLAGS-reldepmod3.c, CFLAGS-reldepmod4.c, CFLAGS-ltglobmod2.c): Remove
	all these variables.

2002-08-04  Ulrich Drepper  <drepper@redhat.com>

	* include/stdio.h: Don't define macro magic to redirect function
	calls if _ISOMAC is defined.

	* sysdeps/i386/fpu/libm-test-ulps: Add epsilons for inlined
	ldouble asin tests.

2002-08-04  Roland McGrath  <roland@redhat.com>

	* stdlib/lrand48_r.c: Add libc_hidden_def.

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls_storage): Allocate the
	TCB with __libc_memalign instead of mmap.
	(_dl_deallocate_tls): Free it with free instead of munmap.

	* Makerules (cpp-srcs-left): When setting this to run
	cppflags-iterator.mk, must append .c to $(tests) and $(xtests)
	words.  Combine the two loops into one on the concatenated list,
	including those as well as $(test-srcs).

	* elf/dl-minimal.c (__libc_memalign): Guts of malloc moved here,
	since we align here with optimally minimal waste anyway.
	(malloc): Just call that.

	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Set l_tls_offset to
	the right variable.

	* elf/dl-load.c (_dl_map_object_from_fd): Use p_vaddr, not p_offset,
	to compute memory location for l_tls_initimage.
	* elf/rtld.c (_dl_start): Likewise.
	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Likewise.
